--- a/app/src/main/res/layout/addmusic.xml
+++ b/app/src/main/res/layout/addmusic.xml
@@ -76,7 +76,7 @@
                 android:gravity="center"
                 android:textStyle="bold"
                 android:textSize="20sp"
-                android:textColor="@color/maingreen"
+                android:textColor="@color/test_main_clolr"
                 app:layout_constraintLeft_toRightOf="@+id/songname_edit_layout"
                 app:layout_constraintHorizontal_weight="0.15"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -126,10 +126,10 @@
 
                 <ImageView
                     android:layout_marginRight="20dp"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:id="@+id/plusbtn"
-                    android:src="@drawable/plusbtn"
+                    android:src="@drawable/newplusbtn"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintRight_toRightOf="parent"/>
 
@@ -150,10 +150,10 @@
 
                     <ImageView
                         android:id="@+id/playbtn2"
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
                         android:layout_marginHorizontal="5dp"
-                        android:src="@drawable/playbtn"
+                        android:src="@drawable/testbtn"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toLeftOf="@+id/stopbtn"
@@ -161,10 +161,10 @@
 
                     <ImageButton
                         android:id="@+id/stopbtn"
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
                         android:layout_marginHorizontal="5dp"
-                        android:src="@drawable/stop"
+                        android:src="@drawable/newstopbtn"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toRightOf="@+id/playbtn2"
                         app:layout_constraintRight_toLeftOf="@+id/seekBar"
@@ -176,6 +176,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="5dp"
                         android:max="10000"
+                        android:theme="@style/SeekBarColor"
                         android:progress="0"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toRightOf="@+id/stopbtn"
@@ -188,7 +189,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="5dp"
                         android:text="00:00 / 00:00"
-                        android:textColor="@color/btn_color"
+                        android:textColor="@color/test_main_clolr"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/seekBar"
