--- a/app/src/main/res/layout/love_activity.xml
+++ b/app/src/main/res/layout/love_activity.xml
@@ -6,6 +6,32 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 android:background="@color/graygreen">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#91646464"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:id="@+id/circularlayout"
+        >
+        <com.mikhaellopez.circularfillableloaders.CircularFillableLoaders
+            android:id="@+id/circularFillableLoaders"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            app:cfl_border="true"
+            app:cfl_border_width="2dp"
+            app:cfl_progress="70"
+            android:src="@drawable/newgreenbird"
+            app:cfl_wave_amplitude="0.06"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:cfl_wave_color="@color/test_main_clolr" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:id="@+id/topscreen_love"
         app:layout_constraintTop_toTopOf="parent"
