--- a/app/src/main/res/layout/new_pickmusic.xml
+++ b/app/src/main/res/layout/new_pickmusic.xml
@@ -6,6 +6,32 @@
     android:layout_height="match_parent"
     android:background="@color/graygreen"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#91646464"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:id="@+id/circularlayout"
+        android:visibility="gone"
+        >
+        <com.mikhaellopez.circularfillableloaders.CircularFillableLoaders
+            android:id="@+id/circularFillableLoaders"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            app:cfl_border="true"
+            app:cfl_border_width="2dp"
+            app:cfl_progress="70"
+            android:src="@drawable/newgreenbird"
+            app:cfl_wave_amplitude="0.06"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:cfl_wave_color="@color/test_main_clolr" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -23,7 +49,7 @@
             android:id="@+id/blob"
             android:layout_width="300dp"
             android:layout_height="300dp"
-            custom:avColor="#687D54"
+            custom:avColor="#2D593C"
             custom:avDensity="0.5"
             custom:avSpeed="medium"
             custom:avType="fill"
