--- a/app/src/main/res/layout/mycollection_activity.xml
+++ b/app/src/main/res/layout/mycollection_activity.xml
@@ -21,7 +21,7 @@
             app:cfl_border="true"
             app:cfl_border_width="2dp"
             app:cfl_progress="70"
-            android:src="@drawable/newgreenbird"
+            android:src="@drawable/progressimg"
             app:cfl_wave_amplitude="0.06"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
