--- a/app/src/main/res/layout/mycollection_activity.xml
+++ b/app/src/main/res/layout/mycollection_activity.xml
@@ -27,7 +27,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:cfl_wave_color="@color/test_main_clolr" />
+            app:cfl_wave_color="#809584" />
     </androidx.constraintlayout.widget.ConstraintLayout>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
