--- a/app/src/main/res/layout/category_add_music.xml
+++ b/app/src/main/res/layout/category_add_music.xml
@@ -90,7 +90,7 @@
             app:layout_constraintLeft_toRightOf="@+id/voicelayout"
             app:layout_constraintRight_toLeftOf="@+id/keyslayout"
             android:background="@drawable/dark_background"
-            app:layout_constraintHorizontal_weight="0.1"
+            app:layout_constraintHorizontal_weight="0.05"
             >
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -181,7 +181,7 @@
             app:layout_constraintLeft_toRightOf="@+id/drumlayout"
             app:layout_constraintRight_toLeftOf="@+id/importlayout"
             android:background="@drawable/dark_background"
-            app:layout_constraintHorizontal_weight="0.1"
+            app:layout_constraintHorizontal_weight="0.05"
             >
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -271,16 +271,16 @@
             android:id="@+id/blanklayout3"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/popularlayout"
-            app:layout_constraintRight_toLeftOf="@+id/etclayout"
+            app:layout_constraintRight_toLeftOf="@+id/ocarinalayout"
             android:background="@drawable/dark_background"
-            app:layout_constraintHorizontal_weight="0.1"
+            app:layout_constraintHorizontal_weight="0.05"
             >
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/etclayout"
+            android:id="@+id/ocarinalayout"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/blanklayout3"
             app:layout_constraintRight_toRightOf="parent"
@@ -292,10 +292,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="Etc"
+                android:text="Ocarina"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                android:id="@+id/etctxt"
+                android:id="@+id/ocarinatxt"
                 android:textColor="@color/beige_color"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -305,7 +305,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/etcimg"
+                android:id="@+id/ocarinaimg"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
