--- a/app/src/main/res/layout/activity_setting_new.xml
+++ b/app/src/main/res/layout/activity_setting_new.xml
@@ -121,7 +121,7 @@
             >
             <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="400dp"
+                android:layout_height="370dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent">
                 <LinearLayout
@@ -192,55 +192,6 @@
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/setting_email_layout"
-                        android:layout_marginTop="15dp"
-                        android:clickable="true"
-                        app:layout_constraintTop_toBottomOf="@id/setting_user_layout"
-                        app:layout_constraintStart_toStartOf="parent"
-
-                        >
-                        <ImageView
-                            android:id="@+id/setting_email_img"
-                            android:layout_width="28dp"
-                            android:layout_height="28dp"
-                            android:src="@drawable/setting_email_img"
-                            android:layout_marginStart="11dp"
-                            app:civ_border_color="#000000"
-                            app:civ_border_overlay="true"
-                            app:civ_border_width="0dp"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            />
-
-                        <TextView
-                            android:id="@+id/setting_email"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="11dp"
-                            android:text="이메일"
-                            android:textStyle="bold"
-                            android:textColor="#000000"
-                            android:textSize="16sp"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintStart_toEndOf="@id/setting_email_img"
-                            app:layout_constraintBottom_toBottomOf="parent"/>
-
-                        <ImageView
-                            android:id="@+id/imageView2"
-                            android:src="@drawable/setting_go_img"
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
-                            android:layout_marginEnd="5dp"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            />
-
-                    </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
@@ -248,7 +199,7 @@
                         android:id="@+id/setting_password_layout"
                         android:layout_marginTop="15dp"
                         android:clickable="true"
-                        app:layout_constraintTop_toBottomOf="@id/setting_email_layout"
+                        app:layout_constraintTop_toBottomOf="@id/setting_user_layout"
                         app:layout_constraintStart_toStartOf="parent"
 
                         >
@@ -701,7 +652,7 @@
             android:layout_height="20dp"
             android:layout_marginBottom="7dp"
             android:gravity="center"
-            android:text="내 정보"
+            android:text="좋아요"
             android:textSize="13sp"
             android:textColor="#8C000000"
             app:layout_constraintBottom_toBottomOf="parent"
