--- a/app/src/main/res/layout/addmusic.xml
+++ b/app/src/main/res/layout/addmusic.xml
@@ -238,9 +238,9 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:paddingBottom="10dp"
-        app:layout_constraintVertical_weight="0.9"
         android:background="#91646464"
-        android:visibility="gone">
+        android:visibility="gone"
+        app:layout_constraintVertical_weight="0.9">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -257,6 +257,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             android:id="@+id/play_cardview"
+            android:visibility="gone"
             app:cardCornerRadius="15dp"
             >
             <FrameLayout
@@ -266,17 +267,6 @@
             </FrameLayout>
         </androidx.cardview.widget.CardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:visibility="gone"
-        android:id="@+id/add_category_framelayout">
-    </FrameLayout>
 
     <!--메뉴바-->
     <androidx.constraintlayout.widget.ConstraintLayout
