--- a/app/src/main/res/layout/add_caption.xml
+++ b/app/src/main/res/layout/add_caption.xml
@@ -127,6 +127,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="작곡한 사람을 알려주세요."
+                        android:singleLine="true"
                         android:id="@+id/writer_content"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/title_writer"
@@ -166,6 +167,7 @@
                         android:layout_height="wrap_content"
                         android:hint="사용한 악기를 알려주세요."
                         android:id="@+id/play_content"
+                        android:singleLine="true"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/title_play"
                         android:textSize="15sp"
@@ -204,6 +206,7 @@
                         android:layout_height="wrap_content"
                         android:hint="노래를 부른 사람을 알려주세요."
                         android:id="@+id/play_singer"
+                        android:singleLine="true"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/title_singer"
                         android:textSize="15sp"
