--- a/app/src/main/res/layout/collect_item.xml
+++ b/app/src/main/res/layout/collect_item.xml
@@ -13,7 +13,7 @@
         app:layout_constraintHorizontal_weight="0.9"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/optionmenu"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <TextView
