--- a/app/src/main/res/layout/comment_child.xml
+++ b/app/src/main/res/layout/comment_child.xml
@@ -30,6 +30,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:padding="10dp"
         android:layout_width="0dp"
         android:id="@+id/contentlayout"
         android:layout_height="wrap_content"
@@ -129,7 +130,8 @@
             android:src="@drawable/newgreenheart"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/lovenum"/>
         <TextView
             android:id="@+id/lovenum"
             android:layout_width="wrap_content"
@@ -138,7 +140,8 @@
             android:textSize="15sp"
             android:textColor="#949494"
             app:layout_constraintTop_toBottomOf="@+id/heartimg"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintStart_toStartOf="@+id/heartimg"
+            app:layout_constraintEnd_toEndOf="@+id/heartimg"
+            app:layout_constraintBottom_toBottomOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
