newpickmusic에도 뒤로가기 다 수정

--- a/app/src/main/res/layout/new_pickmusic.xml
+++ b/app/src/main/res/layout/new_pickmusic.xml
@@ -220,6 +220,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:cardCornerRadius="15dp"
+            android:visibility="gone"
             android:id="@+id/detail_cardview"
             >
             <FrameLayout
