--- a/app/src/main/res/layout/comment_child.xml
+++ b/app/src/main/res/layout/comment_child.xml
@@ -3,11 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/graygreen"
+    android:id="@+id/childlayout"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:padding="10dp"
-        android:id="@+id/profilelayout"
+        android:id="@+id/detailclick1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
@@ -36,7 +37,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintHorizontal_weight="0.8"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/profilelayout"
+        app:layout_constraintStart_toEndOf="@+id/detailclick1"
         app:layout_constraintEnd_toStartOf="@+id/heartlayout"
         app:layout_constraintBottom_toBottomOf="parent">
 
@@ -69,6 +70,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
             android:padding="5dp"
+            android:id="@+id/detailclick2"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toEndOf="@+id/realprofilelayout"
@@ -142,6 +144,17 @@
             app:layout_constraintTop_toBottomOf="@+id/heartimg"
             app:layout_constraintStart_toStartOf="@+id/heartimg"
             app:layout_constraintEnd_toEndOf="@+id/heartimg"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+        <ImageView
+            android:visibility="gone"
+            android:id="@+id/deletetrash"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/trash_can"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
