--- a/app/src/main/res/layout/activity_artist_info.xml
+++ b/app/src/main/res/layout/activity_artist_info.xml
@@ -10,7 +10,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="280dp"
-        android:background="#E69FD18C"
+        android:id="@+id/background_artist"
+        android:background="@color/click_green"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -42,7 +43,6 @@
                 android:id="@+id/bird_img"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
-                android:clickable="true"
                 android:layout_marginTop="40dp"
                 android:layout_marginBottom="10dp"
                 android:src="@drawable/brid_second_img"
@@ -55,13 +55,12 @@
                 app:layout_constraintBottom_toTopOf="@id/info_text"
                 />
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="아티스트"
-                android:layout_marginTop="10dp"
                 android:textStyle="bold"
                 android:textColor="#66875B"
-                android:textSize="13sp"
+                android:textSize="20sp"
                 android:id="@+id/info_text"
                 android:gravity="center"
                 app:layout_constraintTop_toBottomOf="@+id/bird_img"
@@ -129,25 +128,32 @@
                 android:layout_marginTop="5dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/artist_detail_textview"
+                app:layout_constraintBottom_toTopOf="@+id/artist_detail_textview"
                 />
+            <TextView
+                android:id="@+id/artist_detail_textview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="아티스트 정보 표시될겁니다아"
+                android:maxLines="5"
+                android:scrollbars="vertical"
+                android:textColor="#80000000"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="5dp"
 
-                <TextView
-                    android:id="@+id/artist_detail_textview"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="아티스트 정보 표시될겁니다아"
-                    android:maxLines="5"
-                    android:scrollbars="vertical"
-                    android:textColor="#80000000"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginBottom="5dp"
-                    app:layout_constraintTop_toBottomOf="@id/artist_info_textview"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    />
+                app:layout_constraintTop_toBottomOf="@id/artist_info_textview"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
 
+                android:fadeScrollbars="false"
+                android:scrollbarFadeDuration="0"
+                android:scrollbarAlwaysDrawVerticalTrack="true"
+                android:scrollbarDefaultDelayBeforeFade="500000"
+                android:scrollbarSize="5dp"
+                android:scrollbarThumbVertical="@color/midgreen"
+                />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <!--담담님의 음악-->
