--- a/app/src/main/res/layout/homemain.xml
+++ b/app/src/main/res/layout/homemain.xml
@@ -5,31 +5,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#91646464"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:id="@+id/circularlayout"
-        >
-        <com.mikhaellopez.circularfillableloaders.CircularFillableLoaders
-            android:id="@+id/circularFillableLoaders"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            app:cfl_border="true"
-            app:cfl_border_width="2dp"
-            app:cfl_progress="70"
-            android:src="@drawable/progressimg"
-            app:cfl_wave_amplitude="0.06"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:cfl_wave_color="#809584" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -198,6 +173,29 @@
                 android:text="인기차트에 곡이 존재하지 않습니다."
                 android:textSize="20sp"/>
         </LinearLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/circularlayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#91646464"
+            tools:layout_editor_absoluteX="15dp">
+
+            <com.mikhaellopez.circularfillableloaders.CircularFillableLoaders
+                android:id="@+id/circularFillableLoaders"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:src="@drawable/progressimg"
+                app:cfl_border="true"
+                app:cfl_border_width="2dp"
+                app:cfl_progress="70"
+                app:cfl_wave_amplitude="0.06"
+                app:cfl_wave_color="#809584"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
