--- a/app/src/main/res/layout/activity_artist_info.xml
+++ b/app/src/main/res/layout/activity_artist_info.xml
@@ -6,6 +6,31 @@
     android:layout_height="match_parent"
     android:background="@color/bg_color"
     >
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#91646464"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:id="@+id/circularlayout"
+        >
+        <com.mikhaellopez.circularfillableloaders.CircularFillableLoaders
+            android:id="@+id/circularFillableLoaders"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            app:cfl_border="true"
+            app:cfl_border_width="2dp"
+            app:cfl_progress="70"
+            android:src="@drawable/progressimg"
+            app:cfl_wave_amplitude="0.06"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:cfl_wave_color="#809584" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -101,27 +126,46 @@
                 />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-        <!--아티스트 정보-->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/artist_layout"
-            android:background="@drawable/setting_rectangular"
             android:layout_marginStart="25dp"
             android:layout_marginEnd="25dp"
             android:layout_marginTop="15dp"
-            android:padding="10dp"
+            android:background="@drawable/setting_rectangular"
             app:layout_constraintTop_toBottomOf="@id/top_layout"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            >
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="12dp"
+                app:cardElevation="0dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
+
+                <com.scwang.wave.MultiWaveHeader
+                    android:layout_width="match_parent"
+                    android:layout_height="47dp"
+                    android:id="@+id/wave_header"
+                    app:mwhStartColor="#C4C034"
+                    app:mwhCloseColor="@color/start_green"
+                    app:mwhWaves="PairWave"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
+            </androidx.cardview.widget.CardView>
+
             <TextView
                 android:id="@+id/artist_info_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="아티스트 정보"
-                android:textSize="16sp"
+                android:textSize="18sp"
+                android:paddingHorizontal="10dp"
                 android:textStyle="bold"
                 android:textColor="#80000000"
                 android:layout_marginStart="10dp"
@@ -134,6 +178,7 @@
                 android:id="@+id/artist_detail_textview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:padding="10dp"
                 android:hint="아티스트 정보 표시될겁니다아"
                 android:maxLines="5"
                 android:scrollbars="vertical"
@@ -142,6 +187,7 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="5dp"
 
+                android:textSize="15sp"
                 app:layout_constraintTop_toBottomOf="@id/artist_info_textview"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -154,6 +200,7 @@
                 android:scrollbarSize="5dp"
                 android:scrollbarThumbVertical="@color/midgreen"
                 />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <!--담담님의 음악-->
@@ -165,25 +212,80 @@
             android:layout_marginStart="25dp"
             android:layout_marginEnd="25dp"
             android:layout_marginTop="15dp"
-            android:padding="10dp"
             app:layout_constraintTop_toBottomOf="@id/artist_layout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             >
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="12dp"
+                app:cardElevation="0dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
+
+                <com.scwang.wave.MultiWaveHeader
+                    android:layout_width="match_parent"
+                    android:layout_height="47dp"
+                    android:id="@+id/wave_sec_header"
+                    app:mwhStartColor="#C4C034"
+                    app:mwhWaves="PairWave"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
+
+
+            </androidx.cardview.widget.CardView>
             <TextView
                 android:id="@+id/song_list_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="아티스트 음악"
-                android:textSize="16sp"
+                android:textSize="18sp"
+                android:paddingHorizontal="10dp"
                 android:textStyle="bold"
                 android:textColor="#80000000"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:padding="10dp"
+                app:layout_constraintVertical_weight="0.8"
+                android:id="@+id/artistsong"
+                app:layout_constraintTop_toBottomOf="@+id/song_list_textview"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent">
+            </androidx.recyclerview.widget.RecyclerView>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:id="@+id/emptytxt"
+                android:visibility="gone"
+                android:orientation="vertical"
+                app:layout_constraintTop_toBottomOf="@+id/song_list_textview"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="아티스트의 음악이 없습니다."
+                    android:textSize="20sp"/>
+            </LinearLayout>
+
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
