--- a/app/src/main/res/layout/activity_artist_info.xml
+++ b/app/src/main/res/layout/activity_artist_info.xml
@@ -92,6 +92,14 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
+
+                android:singleLine="true"
+                android:ellipsize="marquee"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:scrollHorizontally="true"
+                android:layout_gravity="center_horizontal"
                 />
 
             <ImageView
