--- a/app/src/main/res/layout/new_pickmusic.xml
+++ b/app/src/main/res/layout/new_pickmusic.xml
@@ -97,7 +97,16 @@
                 app:layout_constraintHorizontal_weight="0.8"
                 app:layout_constraintLeft_toRightOf="@+id/heartbtn"
                 app:layout_constraintRight_toLeftOf="@+id/optionmenu"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+
+                android:singleLine="true"
+                android:ellipsize="marquee"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:scrollHorizontally="true"
+                android:layout_gravity="center_horizontal"
+                />
 
             <ImageView
                 android:id="@+id/optionmenu"
